--- a/roles/kubed_head/tasks/main.yml
+++ b/roles/kubed_head/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Initialize k8s cluster using kubeadm
   ansible.builtin.shell: |
-    kubeadm init --apiserver-advertise-address="{{ ansible_host }}" --apiserver-cert-extra-sans="{{ ansible_host }}" --node-name "{{ ansible_hostname }}" --pod-network-cidr="{{ ansible_host.split('.')[:-1] | join('.') }}.0/16"
+    kubeadm init --apiserver-advertise-address="{{ ansible_host }}" --apiserver-cert-extra-sans="{{ ansible_host }}" --node-name "{{ ansible_hostname }}" --pod-network-cidr=10.244.0.0/8
     touch "{{ ki_cluster }}"
   args:
     creates: "{{ ki_cluster }}"
@@ -13,6 +13,14 @@
     chown kwkaiser:kwkaiser /home/kwkaiser/.kube/config
   args:
     creates: /home/kwkaiser/.kube
+
+# - name: Install flannel pod network
+#   become_user: kwkaiser
+#   ansible.builtin.shell: |
+#     kubectl create -f https://github.com/flannel-io/flannel/releases/latest/download/kube-flannel.yml
+#     touch "{{ ki_network_add }}"
+#   args:
+#     creates: "{{ ki_network_add }}"
 
 - name: Install calico pod network
   become_user: kwkaiser
