--- a/roles/kubed/tasks/main.yml
+++ b/roles/kubed/tasks/main.yml
@@ -148,11 +148,12 @@
     state: directory
     recurse: yes
     path: /run/flannel/
-# - name: Copy over flannel config
-#   ansible.builtin.copy:
-#     dest: /run/flannel/subnet.env
-#     content: |
-#       FLANNEL_NETWORK=10.244.0.0/16
-#       FLANNEL_SUBNET=10.244.0.1/24
-#       FLANNEL_MTU=1450
-#       FLANNEL_IPMASQ=true
+
+- name: Copy over flannel config
+  ansible.builtin.copy:
+    dest: /run/flannel/subnet.env
+    content: |
+      FLANNEL_NETWORK=10.244.0.0/16
+      FLANNEL_SUBNET=10.244.0.1/24
+      FLANNEL_MTU=1450
+      FLANNEL_IPMASQ=true
