--- a/roles/comfy/tasks/main.yml
+++ b/roles/comfy/tasks/main.yml
@@ -5,14 +5,14 @@
     update_cache: true
     name:
       - htop
-      - fzf
-      - tldr
+      # - fzf
+      # - tldr
       - vim
       - jq
 
 - name: Install yq via curl
   ansible.builtin.shell: |
-    wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq 
+    wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq
     chmod +x /usr/bin/yq
   args:
     creates: /usr/bin/yq
