--- a/setup-lab.yml
+++ b/setup-lab.yml
@@ -18,24 +18,24 @@
     - mrlesmithjr.zfs
     - storage_array
 
-# - hosts: heads
-#   name: Setup kubernetes cluster head
-#   become: true
-#   roles:
-#     - geerlingguy.kubernetes
-#   vars:
-#     kubernetes_role: "control_plane"
-#     kubernetes_config_init_configuration:
-#       localAPIEndpoint:
-#         advertiseAddress: "{{ ansible_host }}"
-#     kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
+- hosts: heads
+  name: Setup kubernetes cluster head
+  become: true
+  roles:
+    - geerlingguy.kubernetes
+  vars:
+    kubernetes_role: "control_plane"
+    kubernetes_config_init_configuration:
+      localAPIEndpoint:
+        advertiseAddress: "{{ ansible_host }}"
+    kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
 
-# - hosts: nodes
-#   name: Setup kubernetes cluster nodes
-#   become: true
-#   roles:
-#     - geerlingguy.kubernetes
-#   vars:
-#     kubernetes_role: "node" 
-#     kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
+- hosts: nodes
+  name: Setup kubernetes cluster nodes
+  become: true
+  roles:
+    - geerlingguy.kubernetes
+  vars:
+    kubernetes_role: "node" 
+    kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
 
