Add port support for HTTPs

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 inventory = config/devtest-hosts.ini
 host_key_checking = false
 hash_behaviour = merge
-ask_vault_pass = true
+ask_vault_pass = false
 vault_password_file = vars/devtest-secrets.yml
