--- a/roles/storage_array/tasks/main.yml
+++ b/roles/storage_array/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install nfs kernel server
-  ansible.builtin.apt:
+  ansible.builtin.package:
     state: present
     update_cache: true
     name:
