--- a/config/devtest-hosts.ini
+++ b/config/devtest-hosts.ini
@@ -1,29 +1,29 @@
 [hosts]
 homelab-thinkcentre ansible_host=192.168.56.68
-homelab-mainarray ansible_host=192.168.56.69
+# homelab-mainarray ansible_host=192.168.56.69
 
-[homelab_heads]
-homelab-thinkcentre 
+# [homelab_heads]
+# homelab-thinkcentre 
 
-[homelab_nodes]
-homelab-mainarray 
+# [homelab_nodes]
+# homelab-mainarray 
 
-[homelab_storage]
-homelab-mainarray
+# [homelab_storage]
+# homelab-mainarray
 
-[homelab:children]
-homelab_heads
-homelab_nodes
-homelab_storage
+# [homelab:children]
+# homelab_heads
+# homelab_nodes
+# homelab_storage
 
-[heads:children]
-homelab_heads
+# [heads:children]
+# homelab_heads
 
-[nodes:children]
-homelab_nodes
+# [nodes:children]
+# homelab_nodes
 
-[storage:children]
-homelab_storage
+# [storage:children]
+# homelab_storage
 
 [all:vars]
 ansible_user=vagrant
