--- a/setup-lab.yml
+++ b/setup-lab.yml
@@ -3,11 +3,9 @@
   name: Setup common utils shared on all
   become: true
   roles:
-    # - knows_me
-    # - hardened
-    - kubed_2
-    # - comfy
-    # - geerlingguy.containerd
+    - comfy
+    - knows_me
+    - hardened
 
 # - hosts: homelab-mainarray
 #   name: Setup zfs on storage array
@@ -18,24 +16,8 @@
 #     - mrlesmithjr.zfs
 #     - storage_array
 
-# - hosts: heads
-#   name: Setup kubernetes cluster head
-#   become: true
-#   roles:
-#     - geerlingguy.kubernetes
-#   vars:
-#     kubernetes_role: "control_plane"
-#     kubernetes_config_init_configuration:
-#       localAPIEndpoint:
-#         advertiseAddress: "{{ ansible_host }}"
-#     kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
-
-# - hosts: nodes
-#   name: Setup kubernetes cluster nodes
-#   become: true
-#   roles:
-#     - geerlingguy.kubernetes
-#   vars:
-#     kubernetes_role: "node"
-#     kubernetes_kubelet_extra_args: "--node-ip={{ ansible_host }}"
-
+- hosts: homelab-thinkcentre
+  name: Setup kubernetes cluster head
+  become: true
+  roles:
+    - kubed_head
