--- a/roles/kubed_head/tasks/k3s.yml
+++ b/roles/kubed_head/tasks/k3s.yml
@@ -1,3 +1,17 @@
 ---
 - name: Setup server
-  shell: curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC='server --node-external-ip 192.168.56.68 --node-ip 192.168.56.68' sh -s
+  ansible.builtin.shell: curl -sfL https://get.k3s.io | sh -s
+  environment:
+    INSTALL_K3S_EXEC: "server --node-external-ip {{ ansible_host }}"
+  args:
+    creates: /etc/rancher/k3s/k3s.yaml
+
+- name: Replace IP address
+  ansible.builtin.replace:
+    path: /etc/rancher/k3s/k3s.yaml
+    regexp: '127\.0\.0\.1:6443'
+    replace: "{{ ansible_host }}:6443"
+
+- name: Set join token
+  ansible.builtin.set_fact:
+    join_token: "{{ lookup('file', '/var/lib/rancher/k3s/server/node-token' ) }}"
