--- a/roles/storage_array/tasks/main.yml
+++ b/roles/storage_array/tasks/main.yml
@@ -9,6 +9,7 @@
 
 - name: Modify ownership of nfs share
   ansible.builtin.file:
+    mode: '755'
     path: /bulk-pool/nfs
     state: directory
     owner: nobody
@@ -16,9 +17,10 @@
 
 - name: Allow anyone to connect via NFS
   ansible.builtin.copy:
+    mode: '755'
     dest: /etc/exports
     content: |
-      /bulk-pool/nfs *(rw,sync,no_root_squash,no_subtree_check) 
+      /bulk-pool/nfs *(rw,sync,no_root_squash,no_subtree_check)
       /cache-pool/nfs *(rw,sync,no_root_squash,no_subtree_check)
   notify: Restart NFS
 
