Have everything nicely linted

--- a/roles/storage_array/tasks/main.yml
+++ b/roles/storage_array/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: Apply mrlesmithjr zfs role
+  ansible.builtin.include_role:
+    name: mrlesmithjr.zfs
+
 - name: Install nfs kernel server
   ansible.builtin.package:
     state: present
