--- a/roles/kubed_node/tasks/main.yml
+++ b/roles/kubed_node/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
-- name: Download K3s script
+- name: Download K3s script for node
   ansible.builtin.get_url:
     url: https://get.k3s.io
     mode: 'a+x'
     dest: /home/kwkaiser/k3s.sh
 
 - name: Run K3s script
-  ansible.builtin.command: sh -s /home/ansible/k3s.sh
+  ansible.builtin.command: sh /home/kwkaiser/k3s.sh
   environment:
     INSTALL_K3S_EXEC: "agent --node-ip {{ ansible_host }} --node-external-ip {{ ansible_host }} --kubelet-arg=allowed-unsafe-sysctls=net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6"
     K3S_TOKEN: "{{ join_token }}"
