Allow ipv4 forwarding in hosts

--- a/roles/kubed_node/tasks/main.yml
+++ b/roles/kubed_node/tasks/main.yml
@@ -8,7 +8,7 @@
 - name: Run K3s script
   ansible.builtin.command: sh /home/kwkaiser/k3s.sh
   environment:
-    INSTALL_K3S_EXEC: "agent --node-ip {{ ansible_host }} --node-external-ip {{ ansible_host }} --kubelet-arg=allowed-unsafe-sysctls=net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6"
+    INSTALL_K3S_EXEC: "agent --node-ip {{ ansible_host }} --node-external-ip {{ ansible_host }} --kubelet-arg=allowed-unsafe-sysctls=net.ipv4.conf.all.src_valid_mark,net.ipv6.conf.all.disable_ipv6,net.ipv4.ip_forward"
     K3S_TOKEN: "{{ join_token }}"
     K3S_URL: "https://{{ join_server }}:6443"
   args:
