Experiment with k3s ansible playbook

--- a/roles/kubed/tasks/main.yml
+++ b/roles/kubed/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - name: Firewall k8s configs
   ansible.builtin.include_tasks: firewall.yml
+
+- name: Sysctl k8s configs
+  ansible.builtin.include_tasks: sysctl.yml
